# bos-map

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: deploy-frontend-org.yml  deploy.yml  pipeline.yml
data/processed/: ils-index.json  ils-points.geojson  ils.geojson  metadata.json
data/processed/normalized/: bb.geojson  be.geojson  bw.geojson  by.geojson  hb.geojson  he.geojson  hh.geojson  mv.geojson  ni.geojson  nw.geojson  rp.geojson  sh.geojson  sl.geojson  sn.geojson  st.geojson  th.geojson  wikipedia.geojson
data/schema/: feature.schema.json
docs/api/v1/: DE-BB-ILS-LAUSIT.json  DE-BB-ILS-NORD.json  DE-BB-ILS-OST.json  DE-BB-ILS-SUED.json  DE-BB-ILS-WEST.json  DE-BE-ILS-BERLIN.json  DE-BW-ILS-AALEN.json  DE-BW-ILS-BIBERA.json  DE-BW-ILS-BOEBLI.json  DE-BW-ILS-BREISG.json  DE-BW-ILS-EMMEND.json  DE-BW-ILS-ESSLIN.json  (+541 more)
docs/data/: ils-index.json  ils-points.geojson  ils.geojson  metadata.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
pipeline/: Makefile  pyproject.toml
pipeline/harvest/: bkg_vg250.py  by_wfs.py  nrw_ogc.py  sn_wms.py  wikipedia.py
pipeline/normalize/: crs.py  derive_polygons.py  geometry.py  run.py  schema.py
pipeline/tests/: test_crs.py  test_geometry.py  test_schema.py
pipeline/validate/: coverage.py  jsonschema_check.py  run.py  topology.py
research/: Amtliche und communitybasierte Datenquellen zu integrierten Leitstellen in Deutschland.md  Recherche zum bundesweiten Verzeichnis integrierter Leitstellen in Deutschland.md
(+6 files in other folders)
